# JIRA-AUTOMATION

./: .env  .gitignore  APPROVAL_WORKFLOW.md  CLEANUP_SUMMARY.md  CODE_FLOW.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  QUICK_START.md  README.md  START_GUIDE.md  WEB_INTERFACE.md  docker-compose.yml  pyproject.toml  requirements.txt  run_web.py  test_scenarios.py
src/: main.py
src/approval/: __init__.py  approval_manager.py
src/graphs/: jira_agent_graph.py
src/models/: llm_config.py
src/tools/: jira_operations.py  jira_operations_approved.py  jira_tool.py
src/web/: __init__.py  app.py  users.csv
src/web/templates/: chat.html
